v3.7:
  - Fix AdvancedEnchantments hook
--------------------------------------------
v3.6:
  - Fix console error "BLOCK is not an item"
  - Fix offhand glitch with the transfer action
--------------------------------------------
v3.5:
  - Added sweepingedge action (MC>=1.12): when the player attacks an entity with an item that has sweeping edge. The original attack will continue but the sweeping edge damage will be cancelled;
  - Added displayname-equals-regex for custom items
  - Added configurable worlds for illegal-stacks
  - Fixed lore-contains-regex metadata for custom item
  - Fixed entityinteract action throwing error (MC >=1.9 && MC <=1.15)
--------------------------------------------
v3.4:
  - Added mending action (MC>=1.13): when a player has an item repaired via the mending enchantment;
  - Added an illegal stacks item scanner: you can set custom max stacks amount for items and choose what to do if the player has an illegal stacked item into its inventory;
  - Added complete item attributes matches for custom items (big thanks to Epicanard) (MC>=1.8):
    - Example custom item:
	  mysword:
	    material: diamond_sword
	    attribute: GENERIC_ATTACK_DAMAGE:>2.3
  - Disabled particles by defaut in the config;
  - Fixed hoppers-block for transfer action;
  - Fixed offhand for entityinteract;
  - [Dev] Created, hosting and fixed maven repository for all dependencies;
--------------------------------------------
v3.3.3:
  - Added reverted custom items:
    - Using the reverted keyword, the plugin will revert the ban of a custom item (all items will be banned except the custom item);
  - Updated plugin for 1.18 and more:
    - full recode of the versioning system which allows the plugin to work on several updates;
--------------------------------------------
v3.3.2: (hotfix)
  - Fixed smith action error;
--------------------------------------------
v3.3.1: (hotfix)
  - Fixed inventory error;
  - Fixed enchantments ban data;